@@ -1507,7 +1507,10 @@ PHP_FUNCTION(extract)
 
 			case EXTR_OVERWRITE:
 				/* GLOBALS protection */
-				if (var_exists && !strcmp(var_name, "GLOBALS")) {
+ 				if (var_exists && var_name_len == sizeof("GLOBALS") && !strcmp(var_name, "GLOBALS")) {
+ 					break;
+ 				}
+				if (var_exists && var_name_len == sizeof("this")  && !strcmp(var_name, "this") && EG(scope) && "" != EG(scope)->name) {
 					break;
 				}
 				smart_str_appendl(&final_name, var_name, var_name_len);
